úprava viditelnosti spotify, prehrávacích prvkov v prehrávači, nalinkovanie mojevideo linku v links, pridanie mojevideo ikony,

--- a/index.html
+++ b/index.html
@@ -256,10 +256,11 @@
   </div>
   <section id="links" class="glassy">
             <a href="https://www.youtube.com/@PreciseMusic/videos" target="_blank" data-aos="zoom-in" data-aos-delay="300">                                 <img src="./icons/links/bw/youtube-bw.png" alt="youtube-link"> </a>        
-            <a href="https://open.spotify.com/user/kww1717xkl8wkfx4w3ewtcjer?si=d01410ca30bc4a24" target="_blank" data-aos="zoom-in" data-aos-delay="600">  <img src="./icons/links/bw/spotify-bw.jpg" alt="spotify-link"> </a>
-            <a href="https://www.house-mixes.com/profile/PreciseMusic" target="_blank" data-aos="zoom-in" data-aos-delay="900">                             <img src="./icons/links/bw/house-mixes-bw.png" alt="house-mixes-link"></a>
-            <a href="https://www.mixcloud.com/PreciseMusic/" target="_blank" data-aos="zoom-in" data-aos-delay="1200">                                       <img src="./icons/links/bw/mixcloud-bw.jpg" alt="mixcloud-link"> </a>
-            <a href="https://www.facebook.com/precise.music.channel/" target="_blank" data-aos="zoom-in" data-aos-delay="1500">                              <img src="./icons/links/bw/facebook-bw.png" alt="facebook-link">  </a>
+           
+            <a href="https://www.house-mixes.com/profile/PreciseMusic" target="_blank" data-aos="zoom-in" data-aos-delay="600">                             <img src="./icons/links/bw/house-mixes-bw.png" alt="house-mixes-link"></a>
+
+            <a href="https://www.mojevideo.sk/u/precisemusic/" target="_blank" data-aos="zoom-in" data-aos-delay="900">                                     <img src="./icons/links/bw/mojevideo-bw.png" alt="mojevideo-link"></a>
+          
   </section>
 
   <footer> 
